# nes

./: CMakeLists.txt  README.md  main.cpp
src/: bus.cpp  bus.h  cartridge.cpp  cartridge.h  cpu.cpp  cpu.h  log.h  main.cpp  ppu.cpp  ppu.h  register.cpp  register.h  utils.cpp  utils.h
src/mappers/: mapper.cpp  mapper.h  mapper_cnrom.cpp  mapper_cnrom.h  mapper_mmc1.cpp  mapper_mmc1.h  mapper_nmrom.cpp  mapper_nmrom.h  mapper_nrom.cpp  mapper_nrom.h
src/registers/: loopy.cpp  loopy.h  ppuctrl.cpp  ppuctrl.h  ppumask.cpp  ppumask.h  ppustatus.cpp  ppustatus.h  register.cpp  register.h  status.cpp  status.h
test/: cpu_test.cpp  utils_test.cpp
test/registers/: loopy_test.cpp  register_test.cpp
